Add basic styling to cover

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   
   	<title>Learn to Code and Help Nonprofits | Free Code Camp</title>
 
+  	<!-- Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+
 	<!-- Bootstrap CSS File -->
   	<link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
 	
@@ -17,6 +20,40 @@
 </head>
 
 <body>
+
+   <nav class="navbar navbar-fixed-top navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html"><span class="secondary">free</span><span class="primary">CodeCamp</span></a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+           <ul class="nav navbar-nav navbar-right">
+              <li><a href="">Map</a></li>
+              <li><a href="">Chat</a></li>
+              <li><a href="">Wiki</a></li>
+              <li><a href="">About</a></li>
+              <li><a href="">Shop</a></li>
+              <li><a href="">Sign In</a></li>
+           </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="cover">
+      <div class="cover-text">
+         <h1>Launch Your Career as a Software Engineer</h1>
+         <p class="lead cover-text-secondary">Learn to code and help nonprofits</p>
+         <a href="index.html" role="button" class="btn btn-default btn-lg">Start Coding</a>
+         <br><a href="index.html" role="button" class="btn btn-default btn-lg">My nonprofit needs coding help</a>
+      </div>
+    </div>
 
 	 <!-- jQuery -->
   	<script src="assets/js/vendor/jquery-2.2.0.min.js"></script>
