Change .btn-primary color / Add .btn-inverse class

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <div class="cover-text">
          <h1>Launch Your Career as a Software Engineer</h1>
          <p class="lead cover-text-secondary">Learn to code and help nonprofits</p>
-         <a href="index.html" role="button" class="btn btn-default btn-lg">Start Coding</a>
-         <br><a href="index.html" role="button" class="btn btn-default btn-lg">My nonprofit needs coding help</a>
+         <a href="index.html" role="button" class="btn btn-primary btn-lg">Start Coding</a>
+         <br><a href="index.html" role="button" class="btn btn-inverse btn-lg">My nonprofit needs coding help</a>
       </div>
     </div>
 
