Style navbar / Change cover image / Change highlight color to green

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <li><a href="">Wiki</a></li>
               <li><a href="">About</a></li>
               <li><a href="">Shop</a></li>
-              <li><a href="">Sign In</a></li>
+              <button type="button" class="btn navbar-btn" id="sign-in">Sign in</button>
            </ul>
         </div>
       </div>
