--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="cover-text">
          <h1>Launch Your Career as a Software Engineer</h1>
          <p class="lead cover-text-secondary">Learn to code and help nonprofits</p>
-         <a href="index.html" role="button" class="btn btn-primary btn-lg">Start Coding</a>
+         <a href="index.html" role="button" class="btn btn-orange btn-lg">Start Coding</a>
          <br><a href="index.html" role="button" class="btn btn-inverse btn-lg">My nonprofit needs coding help</a>
       </div>
     </div>
