Add two new sections with minimal styling

--- a/index.html
+++ b/index.html
@@ -55,6 +55,40 @@
       </div>
     </div>
 
+    <section class="howitworks">
+      <div class="container">
+         <h2>How Free Code Camp Works</h2>
+         <div class="row">
+         	<div class="col-lg-3">
+         		<img src="assets/img/placeholder-img.svg">
+         		<h3>Join a community of 200,000+ developers.</h3>
+         	</div>
+         	<div class="col-lg-3">
+         		<img src="assets/img/placeholder-img.svg">
+         		<h3>Work on coding challenges together.</h3>
+         	</div>
+         	<div class="col-lg-3">
+         		<img src="assets/img/placeholder-img.svg">
+         		<h3>Build a portfolio of apps that solve real problems.</h3>
+         	</div>
+         	<div class="col-lg-3">
+         		<img src="assets/img/placeholder-img.svg">
+         		<h3>Empower nonprofits with code.</h3>
+         	</div>
+         </div>
+
+
+      </div>
+    </section>
+
+    <section class="infobox">
+      <div class="container">
+         <div class="infobox-inner">
+            Free Code Camp is a proven path to your first coding job. In fact, no one has actually completed our entire program, because campers get jobs before they're able to.
+         </div>
+      </div>
+    </section>
+
 	 <!-- jQuery -->
   	<script src="assets/js/vendor/jquery-2.2.0.min.js"></script>
 	<!-- Bootstrap Javascript File -->
