Style testimonials section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          	</div>
 
          	<div class="col-lg-3">
-         		<img src="assets/img/landingIcons_portfolio.svg">
+         		<img src="assets/img/landingIcons_portfolio.svg" >
          		<h3>Build a portfolio of apps that solve real problems.</h3>
          	</div>
 
@@ -198,24 +198,36 @@
     		<div class="row">
     			
     			<div class="col-md-4">
-    				<img src="assets/img/testimonial-ashley-drake.jpg">
-    				<p>Free Code Camp helped me get my first engineering job. This amazing community made my career switch a lot easier and more fun.<p>
-    				<p>- Ashley Drake</p>
+    				<img src="assets/img/testimonial-ashley-drake.jpg" class="img-circle">
+            <div class="testimonial-text-box">
+              <p>&ldquo;Free Code Camp helped me get my first engineering job. This amazing community made my career switch a lot easier and more fun.&rdquo;</p>
+              <p class="testimonial-name">- Ashley Drake</p>            
+            </div>
     			</div>
 
     			<div class="col-md-4">
-    				<img src="assets/img/testimonial-brian-grant.jpg">
-    				<p>Free Code Camp's a great way for disabled veterans like me to retrain. I'm receiving engineering job offers, and I haven't even finished yet.<p>
-    				<p>- Brian Grant</p>
+    				<img src="assets/img/testimonial-brian-grant.jpg" class="img-circle">
+    				<div class="testimonial-text-box">
+              <p>&ldquo;Free Code Camp's a great way for disabled veterans like me to retrain. I'm receiving engineering job offers, and I haven't even finished yet.&rdquo;</p>
+              <p class="testimonial-name">- Brian Grant</p>
+            </div>
+            
     			</div>
 
     			<div class="col-md-4">
-    				<img src="assets/img/testimonial-maxim-orlov.jpg">
-    				<p>I started Free Code Camp with zero knowledge of web development. 6 months later, I landed my first job as a back end engineer.<p>
-    				<p>- Brian Grant</p>
+    				<img src="assets/img/testimonial-maxim-orlov.jpg" class="img-circle">
+    				<div class="testimonial-text-box">
+              <p>&ldquo;I started Free Code Camp with zero knowledge of web development. 6 months later, I landed my first job as a back end engineer.&rdquo;</p>
+    				  <p class="testimonial-name">- Maxim Orlov</p>
+            </div>
     			</div>
 
     		</div>
+
+        <div class="row">
+          <a href="index.html" role="button" class="btn btn-orange btn-lg center-button">Start Coding</a>
+        </div>
+
     	</div>
     </section>
 
