Change font for h1,h2 and navbar-brand

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   	<!-- Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Sanchez' rel='stylesheet' type='text/css'>
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -24,7 +25,8 @@
 </head>
 
 <body>
-
+  
+  <!-- navbar -->
    <nav class="navbar navbar-fixed-top navbar-default">
       <div class="container">
         <div class="navbar-header">
