Add logo image to navbar and footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><span class="secondary">free</span><span class="primary">CodeCamp</span></a>
+          <a class="navbar-brand" href="index.html"><span class="orange">free</span><span class="green">CodeCamp</span><img src="assets/img/logo.svg"></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -232,13 +232,14 @@
 
     	</div>
     </section>
-
+    
+    <!-- FOOTER -->
     <footer>
       <div class="container">
         <div class="row">
 
-            <div class="col-md-3 footer-about">
-                <h2>Free Code Camp</h2>
+            <div class="col-md-4 footer-about">
+                <h2>freeCodeCamp<img src="assets/img/logo-footer.svg"></h2>
                 <p><strong>Join our open source community’s quest to teach coding and help nonprofits.</strong></p>
                 <p>Sign Up</p>
                 <!-- <hr> -->
@@ -255,7 +256,7 @@
               </div>
 
               
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <ul>
                     <li>Contact Us</li>
                     <li>Privacy Policy</li>
