--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
          
          <div class="row">
 
-         	<div class="col-lg-3">
+         	<div class="col-md-3">
          		<img src="assets/img/landingIcons_connect.svg">
          		<h3>Join a community of 200,000+ developers.</h3>
          	</div>
 
-         	<div class="col-lg-3">
+         	<div class="col-md-3">
          		<img src="assets/img/landingIcons_learn.svg">
          		<h3>Work on coding challenges together.</h3>
          	</div>
 
-         	<div class="col-lg-3">
+         	<div class="col-md-3">
          		<img src="assets/img/landingIcons_portfolio.svg" >
          		<h3>Build a portfolio of apps that solve real problems.</h3>
          	</div>
 
-         	<div class="col-lg-3">
+         	<div class="col-md-3">
          		<img src="assets/img/landingIcons_nonprofits.svg">
          		<h3>Empower nonprofits with code.</h3>
          	</div>
