Make infobox section mobile

--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
 	    
     </section>
 
-    <section class="infobox">
+    <section id="infobox">
       <div class="container">
-         <div class="infobox-inner">
+         <div id="infobox-inner">
             Free Code Camp is a proven path to your first coding job. In fact, no one has actually completed our entire program, because campers get jobs before they're able to.
          </div>
       </div>
