--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
       </div>
     </nav>
 
- <!--    <div class="cover">
+    <div class="cover">
       <div class="cover-text">
          <h1>Launch Your Career as a Software Engineer</h1>
          <p class="lead cover-text-secondary">Learn to code and help nonprofits</p>
          <a href="index.html" role="button" class="btn btn-orange btn-lg btn-extra-padding">Start Coding (it's free)</a>
-         <br><a href="index.html" role="button" class="btn btn-inverse btn-lg">My nonprofit needs coding help</a>
+         <a href="index.html" role="button" class="btn btn-inverse btn-lg">My nonprofit needs coding help</a>
       </div>
-    </div> -->
+    </div>
 
     <section class="howitworks">
       <div class="container">
@@ -133,7 +133,7 @@
   
     <section class = "skills-youll-learn">
 	    <div class="container">
-	    	<h2>Skills You'll Learn:</h2>
+	    	<h2>Skills You'll Learn</h2>
 	    	
 	    	<div class="row">
 		    			
