Add press coverage

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
          <!-- buttons -->
          <a href="index.html" role="button" class="btn btn-orange btn-lg btn-extra-padding button-landing-page">Start Coding (it's free)</a>   
          <a href="index.html" role="button" class="btn btn-inverse btn-lg button-landing-page">My nonprofit needs coding help</a>
+        
+        <!-- Press Coverage -->
+        <div id="press-coverage">
+            <p id="press-coverage-title">As Seen On:</p>
+            <!-- <img src="assets/img/as-seen-on.png"> -->
+            <div class="col-md-6 press-coverage1">
+               <img class="img-responsive" src="assets/img/press-coverage1.png">
+            </div>
+            <div class="col-md-6 press-coverage2">
+               <img class="img-responsive" src="assets/img/press-coverage2.png">
+            </div>
+        </div>
+
       </div>
 
     </div>
