Fix links in footer

--- a/index.html
+++ b/index.html
@@ -269,36 +269,36 @@
             <div class="col-md-4 footer-about">
                 <h2>freeCodeCamp<img src="assets/img/logo-footer.svg"></h2>
                 <p><strong>Join our open source community’s quest to teach coding and help nonprofits.</strong></p>
-                <p>Sign Up</p>
+                <p><a href="">Sign Up</a></p>
                 <!-- <hr> -->
             </div>
                
            <div class="col-md-3">
                <ul>
-                  <li>Join Now For Free</li>
-                  <li>About Us</li>
-                  <li>Frequenty Asked Questions (FAQs)</li>
-                  <li>Academic Honesty Policy</li>
+                  <li><a href="">Join Now For Free</a></li>
+                  <li><a href="">About Us</a></li>
+                  <li><a href="">Frequenty Asked Questions (FAQs)</a></li>
+                  <li><a href="">Academic Honesty Policy</a></li>
                </ul>
            </div>
               
            <div class="col-md-2">
                <ul>
-                 <li>Contact Us</li>
-                 <li>Privacy Policy</li>
-                 <li>Code of Conduct</li>
-                 <li>Terms of Service</li>
+                 <li><a href="">Contact Us</a></li>
+                 <li><a href="">Privacy Policy</a></li>
+                 <li><a href="">Code of Conduct</a></li>
+                 <li><a href="">Terms of Service</a></li>
                </ul>
            </div>
 
             <div class="col-md-3">
-               <p><strong>Social Media</strong></p>
-               <i class="ion-social-twitch footer-icon"></i>
-               <i class="ion-social-reddit footer-icon"></i>
-               <i class="ion-social-github footer-icon"></i>
-               <i class="ion-social-linkedin footer-icon"></i>
-               <i class="ion-social-twitter footer-icon"></i>
-               <i class="ion-social-facebook footer-icon"></i>
+               <p class=social-media><strong>Social Media</strong></p>
+               <a href=""><i class="ion-social-twitch footer-icon"></i></a>
+               <a href=""><i class="ion-social-reddit footer-icon"></i></a>
+               <a href=""><i class="ion-social-github footer-icon"></i></a>
+               <a href=""><i class="ion-social-linkedin footer-icon"></i></a>
+               <a href=""><i class="ion-social-twitter footer-icon"></i></a>
+               <a href=""><i class="ion-social-facebook footer-icon"></i></a>
             </div>
 
          </div>
