--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><span class="orange-text">free</span><span class="green-text">CodeCamp</span><img src="assets/img/logo.svg"></a>
+         <a class="navbar-brand" href="index.html">
+            <img src="assets/img/logo-navbar.png">
+         </a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
