Remove "it's still free" from button

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       
       <div class="row">
          <!-- buttons -->
-         <a href="index.html" role="button" class="btn btn-orange btn-lg btn-extra-padding button-landing-page">Start Coding (it's still free)</a>
+         <a href="index.html" role="button" class="btn btn-orange btn-lg btn-extra-padding button-landing-page">Start Coding</a>
          <a href="index.html" role="button" class="btn btn-green-inverse btn-lg button-landing-page">Hear More From Our Campers</a> 
       </div>
 
