--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		    			
             <div id ="curriculum-hours">
               <p>Front End Development (400 hours) </p>
-		    			<p>Data Visuapzation (400 hours)</p>
+		    			<p>Data Visualzation (400 hours)</p>
 		    			<p>Back End Development (800 hours)</p>
 		    			<p>+  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Interview Prep (80 hours)</p>
 		    			<hr>
